@@ -107,7 +107,7 @@ Return true if @var{name} is a valid variable name.
       std::string varname = args(0).string_value ();
 
       retval = (octave::valid_identifier (varname)
-                && ! octave::is_keyword (varname));
+                && ! octave::iskeyword (varname));
     }
 
   return retval;
