@@ -166,6 +166,8 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
       patch                | normalmode              |
       surface              | normalmode              |
 
+ ** The C++ function is_keyword has been deprecated in favor of
+    iskeyword.  The old function will be removed two versions after 5.0.
 
 ---------------------------------------------------------
 
